// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`poll title should match snapshot (default) 1`] = `""`;

exports[`poll title should match snapshot (form) 1`] = `
<div
  className="c-poll-display__input-box u-align-center"
>
  <h3
    className="c-poll-display__input-text js-ref-input u-margin-half"
    contentEditable={true}
    onBlur={[Function]}
    onInput={[Function]}
    suppressContentEditableWarning={true}
  />
  <h3
    className="c-poll-display__input-placeholder  js-hide-placeholder"
  >
    Untitled
  </h3>
  <h4>
    By Anonymous
  </h4>
</div>
`;

exports[`poll title should match snapshot (form, author) 1`] = `
<div
  className="c-poll-display__input-box u-align-center"
>
  <h3
    className="c-poll-display__input-text js-ref-input u-margin-half"
    contentEditable={true}
    onBlur={[Function]}
    onInput={[Function]}
    suppressContentEditableWarning={true}
  />
  <h3
    className="c-poll-display__input-placeholder  js-hide-placeholder"
  >
    Untitled
  </h3>
  <h4>
    By Author A
  </h4>
</div>
`;

exports[`poll title should match snapshot (form, title) 1`] = `
<div
  className="c-poll-display__input-box u-align-center"
>
  <h3
    className="c-poll-display__input-text js-ref-input u-margin-half"
    contentEditable={true}
    onBlur={[Function]}
    onInput={[Function]}
    suppressContentEditableWarning={true}
  >
    Title A
  </h3>
  <h3
    className="c-poll-display__input-placeholder is-hidden js-hide-placeholder"
  >
    Untitled
  </h3>
  <h4>
    By Anonymous
  </h4>
</div>
`;

exports[`poll title should match snapshot (view) 1`] = `
<div
  className="u-align-center"
>
  <h3
    className="u-margin-half"
  >
    Untitled
  </h3>
  <h4>
    By Anonymous
  </h4>
</div>
`;

exports[`poll title should match snapshot (view, author) 1`] = `
<div
  className="u-align-center"
>
  <h3
    className="u-margin-half"
  >
    Untitled
  </h3>
  <h4>
    By Author A
  </h4>
</div>
`;

exports[`poll title should match snapshot (view, title) 1`] = `
<div
  className="u-align-center"
>
  <h3
    className="u-margin-half"
  >
    Title A
  </h3>
  <h4>
    By Anonymous
  </h4>
</div>
`;
